--- a/FrameWork/src/test/java/config/Element.properties
+++ b/FrameWork/src/test/java/config/Element.properties
@@ -1,3 +1,2 @@
 #Element locators for Homepage
-useregion_search_xpath="//input[@id='inp_RegionSearch_top']";
-
+useregion_search_xpath="//input[@id='inp_RegionSearch_top']"
